--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         </ul>
                     </div>
                 </li>
-                <li class="mx-mde"><a class="lien" href="#contact">Contact</a></li>
+                <li class="mx-mde"><a id="moi" class="lien" href="#contact">Contact</a></li>
             </ul>
         </div>
         <div class="logine rounded-circle">
